tkg_tmc_to/cluster-3-vendor/ingress-test/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      nodePort: 32222
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: helloworld
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
