tkg_tmc_to/cluster-3-vendor/ingress-test/helloworld-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: helloworld
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: helloworld
              servicePort: 8081
